--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
+    "autobahn-browser": "^19.10.1",
     "cordova-plugin-geolocation": "^4.0.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
