--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@asymmetrik/ngx-leaflet": "^6.0.1",
     "@ionic-native/core": "^5.19.1",
     "@ionic-native/geolocation": "^5.19.1",
     "@ionic-native/splash-screen": "^5.19.1",
@@ -28,6 +29,7 @@
     "autobahn-browser": "^19.10.1",
     "cordova-plugin-geolocation": "^4.0.2",
     "core-js": "^2.5.4",
+    "leaflet": "^1.6.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -44,6 +46,7 @@
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/leaflet": "^1.5.7",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.2.1",
     "jasmine-core": "~3.4.0",
