--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@asymmetrik/ngx-leaflet": "^6.0.1",
+    "@capacitor/core": "1.4.0",
     "@ionic-native/camera": "^5.19.1",
     "@ionic-native/core": "^5.19.1",
     "@ionic-native/geolocation": "^5.19.1",
@@ -30,9 +31,8 @@
     "autobahn-browser": "^19.10.1",
     "cordova-android": "8.1.0",
     "cordova-browser": "6.0.0",
-    "cordova-ios": "5.1.1",
+    "cordova-ios": "^5.1.1",
     "cordova-plugin-camera": "^4.1.0",
-    "cordova-plugin-geolocation": "^4.0.2",
     "core-js": "^2.5.4",
     "leaflet": "^1.6.0",
     "rxjs": "^6.5.4",
@@ -48,6 +48,7 @@
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
+    "@capacitor/cli": "1.4.0",
     "@ionic/angular-toolkit": "^2.1.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
@@ -87,9 +88,9 @@
       }
     },
     "platforms": [
-      "ios",
       "android",
-      "browser"
+      "browser",
+      "ios"
     ]
   }
 }
